# recipebox

./: pyproject.toml
recipebox/: admin.py  forms.py  models.py  settings.py  urls.py  views.py
recipebox/migrations/: 0001_initial.py
recipebox/templates/: addauthorform.html  addrecipeform.html  author.html  index.html  loginform.html  recipe.html  registerform.html
